# python-tools-and-libs

./: .gitignore  README.md  pyproject.toml
docs/: 01_uv.md  02_pytest.md  03_logging.md  04_env.md  05_debugging_uv.md  06_argparse_marimo.py  argparse.ipynb
docs/01_fast_api_demo/: 01_fast_api_demo.md
docs/02_pytest/: 02_pytest.md  main.py  test_users.py
docs/03_logging/: 03_logging.md  logging_conf.yaml
docs/04_env/: 04_env.md
docs/05_debugging/: 05_debugging_uv.md  launch.json  main.py
docs/05_debugging/debugging/: main.py
docs/06_argparse/: 06_argparse.ipynb  06_pyodbc.md
docs/06_jupyter/: 06_jupyter.md
docs/07_argparse/: 07_argparse.ipynb
docs/99_work_in_progress/07_gitleaks/: 07_gitleaks.py
docs/99_work_in_progress/polars/: polars.ipynb
docs/99_work_in_progress/pyodbc/: database.py  database_migrations.md  pyodbc_example.py
src/: main.py
test/: test_loyal_users.py  test_misc.py  test_users.py
tests/: test_loyal_users.py
