[project]
name = "fridge-fast-api-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pymysql>=1.1.3",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "ruff>=0.15.13",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
